# panini

./: .fuzzfilter  .gitignore  Cargo.toml  README.md  expanded.rs
char_classifier/: Cargo.toml
char_classifier/src/: back.rs  front.rs  lib.rs  middle.rs
common/: Cargo.toml
common/src/: lib.rs  rs.rs
enum_stream_codegen/: Cargo.toml
enum_stream_codegen/src/: back.rs  front.rs  lib.rs  middle.rs
panini/: Cargo.toml
panini/src/: lib.rs  runtime.rs
panini_codegen/: Cargo.toml
panini_codegen/doc/: instruction.rs
panini_codegen/src/: generate.rs  instruction.rs  lib.rs  rs.rs  trans.rs
panini_codegen/src/back/: generate.rs  iface.rs  mod.rs  new_trans.rs  trans.rs
panini_codegen/src/front/: ast.rs  lexer.rs  mod.rs  visit.rs
panini_codegen/src/input/: ast.rs  lower.rs  mod.rs
panini_codegen/src/middle/: action.rs  attr.rs  embedded_string.rs  error.rs  fold.rs  hir.rs  ir.rs  lint.rs  lower_ir.rs  mod.rs  rule.rs  tables.rs  trace.rs  ty.rs  warn.rs
panini_codegen/src/middle/hir/: builder.rs  mod.rs  trace.rs
panini_codegen/src/middle/ty/: analysis.rs  mod.rs
panini_codegen/src/newmiddle/: newir.rs
panini_codegen/src/output/: generate.rs  instruction.rs  interpreter.rs  mod.rs  trans.rs
panini_codegen/src/simple_back/: trans.rs
panini_codegen/tests/: empty_grammar_ir.rs  sequence_ir.rs  simple_ir.rs  test_phase_5_generate.rs
panini_codegen/tests/support/: mod.rs
panini_grammar_ast/: Cargo.toml
panini_grammar_ast/src/: lib.rs  token.rs
panini_grammar_parser/: Cargo.toml
panini_grammar_parser/src/: lib.rs
panini_logic/: Cargo.toml
panini_logic/src/: lib.rs  tokens.rs
panini_logic/src/back/: mod.rs  old_generate.rs  trans.rs
panini_logic/src/front/: lexer.rs  mod.rs  visit.rs
panini_logic/src/input/: ast.rs  attr_arguments.rs  mod.rs  parameters.rs
panini_logic/src/interpreted_back/: mod.rs
panini_logic/src/middle/: action.rs  ecs.rs  embedded_string.rs  error.rs  flatten_stmts.rs  fold.rs  hir.rs  ir.rs  mod.rs  rule.rs  rule_rewrite.rs  simplify_pathways.rs  symbol_maps.rs  trace.rs  ty.rs  type_collector.rs  warn.rs
panini_logic/src/output/: instruction.rs  mod.rs  translator.rs
panini_logic/src/simple_back/: generate.rs  mod.rs
panini_logic/tests/: enum_stream_parser.rs  test_bound_deep_sequence.rs  test_deep_sequence.rs  test_flatten.rs  test_flatten_simple.rs  test_multilevel_sequence.rs  test_ty_equality.rs
panini_logic/tests/forlater/: sequence_ir.rs  simple_ir.rs
panini_logic/tests/support/: mod.rs
panini_logic_salsa/: Cargo.toml
panini_logic_salsa/src/: _rich_graph.rs  database.rs  graph.rs  input.rs  lib.rs  values.rs  verify.rs
panini_logic_salsa/src/00_input/: mod.rs  query_group.rs
panini_logic_salsa/src/02_rules/: database.rs  mod.rs  query_group.rs
panini_logic_salsa/src/utils/: comparable_token_stream.rs  mod.rs
panini_logic_salsa/tests/: bound_multilevel.rs  multilevel_sequence.rs  simple.rs
panini_logic_salsa/tests/common/: input.rs  mod.rs  verify.rs
panini_macros/: Cargo.toml
panini_macros/benches/: bench_arithmetic.rs
panini_macros/src/: enum_stream_parser.rs  grammar_parser.rs  lib.rs  util.rs
panini_macros/tests/: calculator.rs  parse_alternative.rs  parse_sequence.rs  parse_simple.rs  parse_with_type.rs  simple.rs  tests.rs
panini_macros/tests/compile-fail/: attr-overruled-with-forbid.rs  empty-grammar.rs  native-type-conflict.rs  recursive-type.rs  type-conflict.rs  useless-rules.rs
panini_macros_bootstrap/: Cargo.toml
panini_macros_bootstrap/src/: lib.rs
panini_macros_bootstrap/src/compiletime_enum_stream/: grammar.rs  mod.rs
panini_macros_bootstrap/src/compiletime_grammar/: grammar.rs  mod.rs
panini_macros_bootstrap/src/runtime_enum_stream/: macros.rs  mod.rs
panini_macros_bootstrap/src/runtime_grammar/: macros.rs  mod.rs
panini_macros_runtime/: Cargo.toml
panini_macros_runtime/src/: lib.rs  trace.rs
panini_runtime/: Cargo.toml
panini_runtime/src/: lib.rs
panini_runtime/src/enum_stream/: macros.rs  mod.rs
panini_runtime/src/grammar/: lower.rs  macros.rs  mod.rs  parser.rs
panini_web/: Cargo.toml  index.html
panini_web/css/: panini.css
panini_web/js/: panini.js
panini_web/src/: main.rs
