[package]
name = "panini_common"
version = "0.0.0"

description = """
A parser generator. This package handles common code for
several of Panini's packages."
"""
authors = ["Piotr Czarnecki <pioczarn@gmail.com>"]
documentation = "http://pczarn.github.io/panini/"
repository = "https://github.com/pczarn/panini/"
license = "MIT/Apache-2.0"

[lib]
name = "panini_common"

[dependencies]
syn = { version = "0.15", features = ["extra-traits", "full"] }
proc-macro2 = "0.4"
quote = "0.6"
