[package]
name = "panini_codegen"
version = "0.0.0"

description = "A parser generator. This package handles code generation for the `grammar` macro."
authors = ["Piotr Czarnecki <pioczarn@gmail.com>"]
documentation = "http://pczarn.github.io/panini/"
repository = "https://github.com/pczarn/panini/"
license = "MIT/Apache-2.0"

[lib]
name = "panini_codegen"

[dependencies]
log = "0.3"
env_logger = "0.3"
quote = "0.3"
bit-matrix = "0.2"
cfg = "0.3"
cfg-regex = "0.0"
gearley = "0.0"

[dev-dependencies]
maplit = "0.1"

[patch.crates-io]
cfg-regex = { path = "/home/piotr/src/cfg-regex" }
panini_macros_snapshot = { path = "/home/piotr/src/panini-snapshot/panini_macros_snapshot" }
gearley = { path = "/home/piotr/src/gearley" }
cfg = { path = "/home/piotr/src/cfg" }
regex_dfa = { path = "/home/piotr/src/regex-dfa" }
