[package]
name = "panini_codegen"
version = "0.0.0"

description = "A parser generator. This package handles code generation for the `grammar` macro."
authors = ["Piotr Czarnecki <pioczarn@gmail.com>"]
documentation = "http://pczarn.github.io/panini/"
repository = "https://github.com/pczarn/panini/"
license = "MIT/Apache-2.0"

[lib]
name = "panini_codegen"

[dependencies]
log = "0.4"
env_logger = "0.6"
quote = { path = "../../quote/" }
proc-macro2 = { path = "../../proc-macro2/" }
bit-matrix = "0.2"
cfg = "0.3"
cfg-regex = "0.0"
gearley = "0.0"
serde_cbor = "0.9"

[dev-dependencies]
maplit = "0.1"

[patch.crates-io]
cfg-regex = { path = "/home/piotr/src/cfg-regex" }
panini_macros_snapshot = { path = "/home/piotr/src/panini-snapshot/panini_macros_snapshot" }
gearley = { path = "/home/piotr/src/gearley" }
cfg = { path = "/home/piotr/src/cfg" }
regex_dfa = { path = "/home/piotr/src/regex-dfa" }
