[package]
name = "panini_codegen"
version = "0.0.1"

description = "A parser generator. This package handles code generation for the `grammar` macro."
authors = ["Piotr Czarnecki <pioczarn@gmail.com>"]
documentation = "http://pczarn.github.io/panini/"
repository = "https://github.com/pczarn/panini/"
license = "MIT/Apache-2.0"

[lib]
name = "panini_codegen"

[dependencies]
log = "0.4"
env_logger = "0.7"
quote = "1.0"
proc-macro2 = "1.0"
bit-matrix = "0.4"
cfg = "0.4"
cfg-regex = "0.1"
gearley = "0.0"
enum_coder = "0.0"
serde_cbor = "0.10"
panini_logic = "0.0"
indexmap = "1.6"

[dev-dependencies]
maplit = "1.0"

[patch.crates-io]
cfg-regex = { path = "/home/piotr/src/cfg-regex" }
panini_logic = { path = "/home/piotr/src/panini/panini_logic" }
gearley = { path = "/home/piotr/src/gearley" }
cfg = { path = "/home/piotr/src/cfg" }
regex_dfa = { path = "/home/piotr/src/regex-dfa" }
