[package]
name = "panini_logic"
version = "0.0.0"

description = "A parser generator. This package handles logic for the parser generator."
authors = ["Piotr Czarnecki <pioczarn@gmail.com>"]
documentation = "http://pczarn.github.io/panini/"
repository = "https://github.com/pczarn/panini/"
license = "MIT/Apache-2.0"

[lib]
name = "panini_logic"

[dependencies]
log = "0.4"
env_logger = "0.8"
quote = "1.0"
proc-macro2 = "1.0"
bit-matrix = "0.4"
cfg = "0.5"
cfg-regex = "0.1"
gearley = "0.0.4"
serde_cbor = "0.11"
enum_coder = "0.0"
maplit = "1.0"
