[package]
name = "panini_logic_salsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.16"
quote = "1.0"
proc-macro2 = "1.0"
elsa = { version = "1.7", features = ["indexmap"] }
indexmap = "1.9"
itertools = "0.10"
